--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
     "@hapi/vision": "^7.0.3",
+    "dotenv": "^17.2.0",
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
-    "nanoid": "^3.3.7"
+    "nanoid": "^3.3.7",
+    "pg": "^8.16.3"
   }
 }
