--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/server.js",
-    "prod": "NODE_ENV=production node ./src/server.js"
+    "start:dev": "nodemon ./src/server.js",
+    "start:prod": "NODE_ENV=production node ./src/server.js",
+    "migrate": "node-pg-migrate"
   },
   "private": true,
   "devDependencies": {
@@ -18,6 +19,7 @@
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "nanoid": "^3.3.7",
+    "node-pg-migrate": "^8.0.3",
     "pg": "^8.16.3"
   }
 }
