--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ./src/server.js",
-    "start:prod": "NODE_ENV=production node ./src/server.js",
+    "start:prod": "node ./src/server.js",
     "migrate": "node-pg-migrate"
   },
   "private": true,
